--- a/AlloyTraining/AlloyTraining.csproj
+++ b/AlloyTraining/AlloyTraining.csproj
@@ -262,8 +262,11 @@
   <ItemGroup>
     <Compile Include="Business\Channels\MobileChannel.cs" />
     <Compile Include="Business\Channels\MobileResolution.cs" />
+    <Compile Include="Business\Comments\CommentHandler.cs" />
     <Compile Include="Business\ContentExtensions.cs" />
+    <Compile Include="Business\DependencyResolverInitialization.cs" />
     <Compile Include="Business\ExtensionMethods.cs" />
+    <Compile Include="Business\StructureMapDependencyResolver.cs" />
     <Compile Include="Controllers\FAQPageController.cs" />
     <Compile Include="Controllers\ListingBlockController.cs" />
     <Compile Include="Controllers\NewsPageController.cs" />
@@ -283,6 +286,7 @@
     <Compile Include="Helpers\HtmlHelpers.cs" />
     <Compile Include="Models\Blocks\EditorialBlock.cs" />
     <Compile Include="Models\Blocks\ListingBlock.cs" />
+    <Compile Include="Models\Blocks\PostedComment.cs" />
     <Compile Include="Models\Blocks\TeaserBlock.cs" />
     <Compile Include="Models\Media\ImageFile.cs" />
     <Compile Include="Models\Pages\FAQItem.cs" />
@@ -302,6 +306,7 @@
     <Compile Include="Models\ViewModels\FooterModel.cs" />
     <Compile Include="Models\ViewModels\IPageViewModel.cs" />
     <Compile Include="Models\ViewModels\ListingBlockModel.cs" />
+    <Compile Include="Models\ViewModels\NewsPageViewModel.cs" />
     <Compile Include="Models\ViewModels\RssReaderPageViewModel.cs" />
     <Compile Include="Models\ViewModels\SearchPageViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -386,6 +391,7 @@
     <Content Include="modules\_protected\EPiServer.Forms\Views\ElementBlocks\Web.config" />
     <Content Include="modules\_protected\EPiServer.Forms\Forms.config" />
     <Content Include="modules\_protected\EPiServer.Forms\EPiServer.Forms.zip" />
+    <Content Include="Views\Shared\PostedComment.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
